src/objects/FieloAlpha__RuleTrigger__c.object
<CustomObject>
    <description>Contain information to decide if a record will be processed in order to generate a transaction (if it applies).</description>
    <fields>
        <fullName>FieloPLT__ConditionField__c</fullName>
        <description>The condition is based in picklist fields of the object to decide if a records enters to the rules engine.</description>
        <inlineHelpText>Select the field to evaluate the condition to process a record</inlineHelpText>
        <label>Condition Field</label>
        <picklist>
            <controllingField>FieloPLT__Object__c</controllingField>
            <picklistValues>
                <fullName>Status__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EventType__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloAccountStatus__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ConditionValue__c</fullName>
        <description>value of the picklist selected in the field condition field</description>
        <inlineHelpText>Select the value of the condition field to process the record</inlineHelpText>
        <label>Condition Value</label>
        <picklist>
            <controllingField>FieloPLT__ConditionField__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error in the Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction without Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <defaultValue>&apos;CreatedDate&apos;</defaultValue>
        <description>API name of the field in the object that will be used in order to know which date evaluate for active promotion</description>
        <inlineHelpText>API name of the field in the object that will be used in order to know which date evaluate for active promotion</inlineHelpText>
        <label>Date</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DynamicTargetMember__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked, the field target member in the rule will show the related lookup&apos;s member of the object.
If this field is unchecked, the field target member in the rule will show the values of the field member in the actions related</description>
        <inlineHelpText>If this field is checked, the field target member in the rule will show the related lookup&apos;s member of the object.
If this field is unchecked, the field target member in the rule will show the values of the field member in the actions related</inlineHelpText>
        <label>Dynamic Target Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LookupFromTransaction__c</fullName>
        <description>Api name of the lookup field from the transaction to the record to process</description>
        <inlineHelpText>Api name of the lookup field from the transaction to the record to process, in case the object to process is transaction complete this field with the value &apos;ID&apos;</inlineHelpText>
        <label>Lookup from Transaction</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Object__c</fullName>
        <description>Select the name of the object to enter to the rule engine.</description>
        <inlineHelpText>Select the name of the API name of the object to enter to the rule engine.</inlineHelpText>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>FieloPLT__Transaction__c</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FieloPLT__Event__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloPLT__Member__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Prefix__c</fullName>
        <label>Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Rule Trigger</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Trigger</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>